[gd_scene load_steps=9 format=2]

[ext_resource path="res://Overlay.gd" type="Script" id=1]
[ext_resource path="res://Graphics/slot_01.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Icons/fantasybadges/Tex_badge_22.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Roboto_regular_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Roboto_regular_12.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.541176, 0.498039, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.215686, 0.192157, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.270588, 0.25098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Overlay" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 50.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="Panel"]
modulate = Color( 0, 0, 0, 0.392157 )
show_behind_parent = true
margin_left = -5.0
margin_top = 16.0
margin_right = 1042.0
margin_bottom = 56.0
mouse_filter = 2

[node name="Border" type="NinePatchRect" parent="."]
margin_left = -19.0
margin_top = -206.0
margin_right = 1040.0
margin_bottom = 50.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 256 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Currency" type="Control" parent="."]
margin_left = 383.0
margin_top = -83.0
margin_right = 423.0
margin_bottom = -43.0

[node name="Icon" type="TextureRect" parent="Currency"]
margin_left = 605.0
margin_top = 85.0
margin_right = 637.0
margin_bottom = 117.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Currency"]
margin_left = 517.0
margin_top = 90.0
margin_right = 600.0
margin_bottom = 116.0
text = "125"
align = 2
valign = 1

[node name="Depth" type="Label" parent="."]
margin_left = 394.0
margin_top = -1.0
margin_right = 625.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Depth: 1 - Rocks"
align = 1
valign = 1

[node name="Darkness" type="Label" parent="."]
margin_left = 200.0
margin_top = 4.0
margin_right = 275.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "Darkness: 1"

[node name="DarknessInc" type="Label" parent="."]
margin_left = 200.0
margin_top = 18.0
margin_right = 334.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "Darkness Increase: 1"

[node name="Inventory" type="Button" parent="."]
margin_left = 5.0
margin_top = 8.0
margin_right = 78.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Inventory"

[node name="Character" type="Button" parent="."]
margin_left = 83.0
margin_top = 8.0
margin_right = 156.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Character"

[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Character" to="." method="_on_Character_pressed"]
